--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,12 @@
     <artifactId>java-client</artifactId>
     <version>4.1.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.1.5</version>
+</dependency>
+
 </dependencies>
 </project>
